Bug 100841 - Dragging a cell's frame to Fill Series, etc - no longer shows a tooltip indicating currently reached value
Summary: Dragging a cell's frame to Fill Series, etc - no longer shows a tooltip indic...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.4.2 release
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.4 target:5.4.0
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2016-07-10 16:10 UTC by db0451
Modified: 2017-02-20 17:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast showing dragging to fill series and absence of expected tooltip (153.59 KB, video/webm)
2016-07-10 16:10 UTC, db0451
Details

Note You need to log in before you can comment on or make changes to this bug.
Description db0451 2016-07-10 16:10:56 UTC
Created attachment 126152 [details]
screencast showing dragging to fill series and absence of expected tooltip

Version: 5.1.4.2
Build ID: 1:5.1.4~rc2-2
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: en-US (en_GB.UTF-8)

LO as of Debian unstable. My stable box shows the tooltip just fine, as does MS XL, but the new LO has lost it.

PROCEDURE
* Open a new Calc document
* Type a numeric 0 into a cell
* Select the cell
* Left-click and hold on the square handle at the cell's bottom right
* Drag downwards

EXPECTED RESULT
* Like the old version and XL, a tooltip would be shown next to the handle, indicating what will be filled in the currently dragged-to cell, if you were to release the drag

ACTUAL RESULT
* No tooltip is shown anymore.
* See attached screencast.

Please can we have the tooltip back? :-)
Comment 1 Aron Budea 2016-07-11 01:43:34 UTC
Could not reproduce with 5.1.4.2 in Windows 7 and Ubuntu 15.10, the tooltip is shown for me during dragging.
Comment 2 db0451 2016-07-11 08:49:14 UTC
Thanks for trying. Ubuntu means your DE was Unity, presumably? This was on GNOME. I'll test on alternative DEs - have XFCE and KDE available - though can't imagine how that would affect the issue. Anyway, I'll post results.
Comment 3 db0451 2016-07-11 19:37:28 UTC
hello - still occurs on XFCE and KDE. also isn't affected by theme or anything in the Options I've found (incl h/w accel, etc.)

did aptitude reinstall -calc and -core also to no avail.

What can I do to help diagnose this? e.g. any configs/logs that might be useful to upload. don't really want to have to do a full reinstall but will if needed.
Comment 4 Aron Budea 2016-07-11 23:20:19 UTC
Thanks for testing with different DEs. Yes, I'm using Unity.
Giving 5.2.0.2 would certainly be worth a try, it's available at [1]. Another option would be to verify if the same version as your stable box shows the tooltip (to see if it could be related to something else in the system). You will find instructions on installing LibreOffice in parallel with the existing version at [2]. 

Are other tooltips visible normally? The ones for toolbar buttons for example.

I'm afraid I'm not proficient with Linux insides. Buovjaga, can you take a look?

[1] http://dev-builds.libreoffice.org/pre-releases/
[2] https://wiki.documentfoundation.org/Installing_in_parallel/Linux
Comment 5 Buovjaga 2016-07-12 09:02:20 UTC
Tool tip is shown for me.

Do you have Intel graphics?

64-bit, KDE Plasma 5
Build ID: 5.1.4.2 Arch Linux build-1
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Comment 6 db0451 2016-07-12 09:49:26 UTC
Aron:
I checked and normal tooltips work OK, e.g. on GNOME they use the black/rounded/semitransparent style. I don't know whether maybe the Fill Series etc are meant to use a different type, e.g. the more traditional yellow, so perhaps that's related? I'll try the parallel installations you suggested.

Buovjaga:
Is there a known issue with Intel graphics? I have hybrid graphics comprising Intel i7 with HD Graphics 4000, and a discrete Nvidia GT650M. I would assume the Intel is used primarily though am not certain how it all fits together.
Comment 7 Buovjaga 2016-07-12 15:18:19 UTC
(In reply to db0451 from comment #6)
> Buovjaga:
> Is there a known issue with Intel graphics? I have hybrid graphics
> comprising Intel i7 with HD Graphics 4000, and a discrete Nvidia GT650M. I
> would assume the Intel is used primarily though am not certain how it all
> fits together.

No, it's just known that Intel graphics driver causes all kinds of trouble as Intel refuses to do releases and distros have to pull from master: https://blog.martin-graesslin.com/blog/2016/07/multi-screen-woes-in-plasma-5-7/

I do have Intel graphics myself, Intel Skylake i7-6700K.
Comment 8 db0451 2016-07-12 15:33:19 UTC
(In reply to Buovjaga from comment #7)
> No, it's just known that Intel graphics driver causes all kinds of trouble
> as Intel refuses to do releases and distros have to pull from master:
> https://blog.martin-graesslin.com/blog/2016/07/multi-screen-woes-in-plasma-5-
> 7/
> 
> I do have Intel graphics myself, Intel Skylake i7-6700K.

Thanks for the info. Can it possibly be related, i.e. does LO use a different kind of tooltip for this case? As the normal GTK+ tooltips all seem to be OK. I mean, I guess _anything_ is possible :-) but can it practically be related?

I don't know whether it's possible to force use of the Nvidia card in some way and run LO using that, but I'll do some research.
Comment 9 Buovjaga 2016-07-12 15:48:56 UTC
(In reply to db0451 from comment #8)
> Thanks for the info. Can it possibly be related, i.e. does LO use a
> different kind of tooltip for this case? As the normal GTK+ tooltips all
> seem to be OK. I mean, I guess _anything_ is possible :-) but can it
> practically be related?

Yeah, trawling through this Bugzilla has taught me that anything is possible :)

Probably it is not related, but I thought I'd throw it out there.
Comment 10 Thomas Hackert 2016-07-20 15:45:49 UTC
Hello dbo451, *,
I can confirm this bug with

OS: Debian Testing AMD64
LO: Version: 5.1.4.2
Build-ID: 1:5.1.4~rc2-2
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: GL; 
Gebietsschema: de-DE (de_DE.UTF-8)
(Debian's own version)

but not with

LO: Version: 5.1.4.2
Build-ID: f99d75f39f1c57ebdd7ffc5f42867c12031db97a
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE.UTF-8)

nor

LO: Version: 5.2.0.2
Build-ID: a7567a46e5d2953c320b13eb88a3981c4f9bd1e0
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE.UTF-8)

... The last two versions are parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux. So it seems that this bug is only related to LO from Debian ... :(

I am not sure, if this should be reported here or at https://bugs.debian.org/cgi-bin/pkgreport.cgi?package=libreoffice-calc ... :(
HTH
Thomas.
Comment 11 db0451 2016-07-20 16:02:25 UTC
(In reply to thackert from comment #10)

Hi Thomas, that is great, many thanks for the comprehensive tests! I might've gotten around to it eventually :-) I'm glad you found this and could confirm it.

It is definitely worth reporting to Debian too, as it might somehow be caused by their current package. I've started drafting a Debian bug report but need to wait until I'm at the affected computer again to add more of the info it requests. I guess it would be good if you could report it too. So, whichever of us manages to open a ticket there first, the other one can add their report to it afterwards!

Thanks again.
Comment 12 db0451 2016-07-20 22:24:09 UTC
Hello,

I've now submitted this to the Debian bug tracker:

https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=831977

Hopefully between both parties, it'll be easy to figure out :-)

Thanks!
Comment 13 Rene Engelhard 2016-07-21 18:20:25 UTC
See my comment in the Debian bug:

--- snip ---
But yeah, I can confirm this in 5.1.5~rc1-1, too. Even with UI render: standard
(which is the immediate difference I can see in your above-mentioned comment)

I checked:
- default install: libreoffice-gtk3: no tooltip
- libreoffice-gtk3 removed so neither gtk2 or gtk3: tooltip
- install libreoffice-gtk: LO picks up gtk(2): tooltip

so it seems to be gtk3-only?
--- snip ---
Comment 14 Rene Engelhard 2016-07-21 18:36:47 UTC
same issue in 5.2.0 rc3, fwiw
Comment 15 Caolán McNamara 2016-10-19 12:28:27 UTC
Possibly native gtk3 tooltips refuse to appear when the mouse key is held down, a popover might work here instead
Comment 16 db0451 2016-10-19 12:32:08 UTC
Probably a silly question, and you are probably already doing this... but is it possible that manually calling gtk_widget_trigger_tooltip_query on each update makes any difference? I'm just asking as I have a vague recollection of having trouble getting tooltips to go AWAY in the past after calling that!

https://developer.gnome.org/gtk3/stable/GtkWidget.html#gtk-widget-trigger-tooltip-query
Comment 17 Commit Notification 2016-10-19 13:15:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef044f82452af7b4c844d5ed1ca05869aafe21c5

Resolves: tdf#100841 use Popover instead of Tooltip for the fill series hint

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Caolán McNamara 2016-10-19 13:17:37 UTC
I think a popover fits better here anyway, definitely works better.
Comment 19 Commit Notification 2016-10-20 09:45:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0c6ef4325f6612f4e39448fd12dd6d3f4b0682fa&h=libreoffice-5-2

Resolves: tdf#100841 use Popover instead of Tooltip for the fill series hint

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2017-02-20 17:25:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ad8d5aad67154d112dd69966eaa59bb89609f40

Resolves: tdf#100841 retain popover if it has the same pos, size and settings

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.