Resolves: tdf#100841 use Popover instead of Tooltip for the fill series hint

Change-Id: Id84265d7c76869059144e28c1d9a735efa46fe29
(cherry picked from commit ef044f82452af7b4c844d5ed1ca05869aafe21c5)
Reviewed-on: https://gerrit.libreoffice.org/30058
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>